k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coursework
  labels:
    project: cloud-coursework
