k8s/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: analytics-service
  namespace: coursework

spec:
  replicas: 1

  selector:
    matchLabels:
      app: analytics-service

  template:
    metadata:
      labels:
        app: analytics-service

    spec:
      containers:
        - name: analytics-service

          image: kavindinable/analytics-service:v3
          imagePullPolicy: Always

          ports:
            - containerPort: 3004

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 20
