k8s/event-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: event-service-green
  namespace: coursework
  labels:
    app: event-service
    version: green

spec:
  replicas: 1

  selector:
    matchLabels:
      app: event-service
      version: green

  template:
    metadata:
      labels:
        app: event-service
        version: green

    spec:
      serviceAccountName: event-service-sa

      containers:
        - name: event-service
          image: kavindinable/event-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
