k8s/metabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: metabase
spec:
  replicas: 1

  selector:
    matchLabels:
      app: metabase

  template:
    metadata:
      labels:
        app: metabase

    spec:
      containers:
        - name: metabase
          image: metabase/metabase:latest

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: metabase-plugins
              mountPath: /plugins

      volumes:
        - name: metabase-plugins
          emptyDir: {}
