k8s/registration-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: registration-service
  namespace: coursework
  labels:
    app: registration-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: registration-service

  template:
    metadata:
      labels:
        app: registration-service

    spec:
      containers:
        - name: registration-service
          image: kavindinable/registration-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3003

          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
