k8s/analytics-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: analytics-service
  namespace: coursework

spec:
  selector:
    app: analytics-service

  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004

  type: ClusterIP
