k8s/event-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: event-service
  namespace: coursework
  labels:
    app: event-service

spec:
  type: ClusterIP

  selector:
    app: event-service
    version: blue

  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
