k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: event-frontend
  namespace: coursework

spec:
  selector:
    app: event-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
