k8s/metabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  type: LoadBalancer
  selector:
    app: metabase
  ports:
    - port: 3000
      targetPort: 3000
