k8s/program-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: program-service
  namespace: coursework

spec:
  selector:
    app: program-service

  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002

  type: ClusterIP
