k8s/registration-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: registration-service
  namespace: coursework

spec:
  selector:
    app: registration-service

  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003

  type: ClusterIP
